--- a/kubernetes/main/apps/monitoring/victoria-metrics/app/secret-extrascrapes.yaml
+++ b/kubernetes/main/apps/monitoring/victoria-metrics/app/secret-extrascrapes.yaml
@@ -22,6 +22,8 @@ stringData:
             - nas.greyrock.io:9100
             - dns1.greyrock.io:9100
             - dns2.greyrock.io:9100
+            - nas.greyrock.io:9100
+            - pikvm.greyrock.io:9100
     - job_name: smartctl-exporter
       scrape_interval: 10m
       scrape_timeout: 10s
