fix(monitoring): Use app name for container

--- a/kubernetes/main/apps/monitoring/alertmanager/app/helmrelease.yaml
+++ b/kubernetes/main/apps/monitoring/alertmanager/app/helmrelease.yaml
@@ -32,7 +32,7 @@ spec:
                 - path: /alertmanager
 
         containers:
-          app:
+          alertmanager:
             image:
               repository: quay.io/prometheus/alertmanager
               tag: v0.27.0
