--- a/kubernetes/main/apps/monitoring/kromgo/app/helmrelease.yaml
+++ b/kubernetes/main/apps/monitoring/kromgo/app/helmrelease.yaml
@@ -38,7 +38,7 @@ spec:
                   app.kubernetes.io/name: kromgo
 
         containers:
-          app:
+          kromgo:
             image:
               repository: ghcr.io/kashalls/kromgo
               tag: 0.3.1
