--- a/kubernetes/main/apps/monitoring/silence-operator/app/helmrelease.yaml
+++ b/kubernetes/main/apps/monitoring/silence-operator/app/helmrelease.yaml
@@ -49,7 +49,7 @@ spec:
               type: RuntimeDefault
 
         containers:
-          app:
+          silence-operator:
             image:
               repository: quay.io/giantswarm/silence-operator
               tag: 0.11.2
