--- a/kubernetes/main/apps/monitoring/unpoller/app/helmrelease.yaml
+++ b/kubernetes/main/apps/monitoring/unpoller/app/helmrelease.yaml
@@ -30,7 +30,7 @@ spec:
             fsGroupChangePolicy: "OnRootMismatch"
 
         containers:
-          app:
+          unpoller:
             image:
               repository: ghcr.io/unpoller/unpoller
               tag: v2.11.2
