--- a/kubernetes/main/apps/monitoring/vector/agent/helmrelease.yaml
+++ b/kubernetes/main/apps/monitoring/vector/agent/helmrelease.yaml
@@ -30,7 +30,7 @@ spec:
               effect: NoSchedule
 
         containers:
-          app:
+          vector-agent:
             image:
               repository: docker.io/timberio/vector
               tag: 0.37.1-alpine
