--- a/kubernetes/main/apps/security/authelia/app/config/configuration.yaml
+++ b/kubernetes/main/apps/security/authelia/app/config/configuration.yaml
@@ -144,3 +144,15 @@ identity_providers:
         redirect_uris:
           - https://paperless.greyrock.casa/accounts/oidc/authelia/login/callback/
         userinfo_signed_response_alg: none
+
+      - client_id: ocis
+        client_name: OCIS
+        public: true
+        authorization_policy: one_factor
+        pre_configured_consent_duration: 1y
+        scopes: ["openid", "profile", "groups", "email"]
+        redirect_uris:
+          - https://files.greyrock.casa
+          - https://files.greyrock.casa/oidc-callback.html
+          - https://files.greyrock.casa/oidc-silent-redirect.html
+        userinfo_signed_response_alg: none
