--- a/kubernetes/main/apps/selfhosted/kustomization.yaml
+++ b/kubernetes/main/apps/selfhosted/kustomization.yaml
@@ -15,6 +15,7 @@ resources:
   - ./maker-management-platform/ks.yaml
   - ./miniflux/ks.yaml
   - ./node-red/ks.yaml
+  - ./ocis/ks.yaml
   - ./paperless/ks.yaml
   - ./tandoor/ks.yaml
   - ./thelounge/ks.yaml
