fix(blackbox-exporter): Update rules

--- a/kubernetes/main/apps/monitoring/blackbox-exporter/app/helmrelease.yaml
+++ b/kubernetes/main/apps/monitoring/blackbox-exporter/app/helmrelease.yaml
@@ -65,24 +65,24 @@ spec:
           labels:
             severity: critical
           annotations:
-            description: |-
-              The SSL certificate for {{"{{ $labels.target }}"}} will expire in less than 3 days
+            summary: |-
+              The SSL certificate for {{ $labels.target }} will expire in less than 3 days
         - alert: BlackboxSslCertificateExpired
           expr: probe_ssl_earliest_cert_expiry - time() <= 0
           for: 15m
           labels:
             severity: critical
           annotations:
-            description: |-
-              The SSL certificate for {{"{{ $labels.target }}"}} has expired
+            summary: |-
+              The SSL certificate for {{ $labels.target }} has expired
         - alert: BlackboxProbeFailed
           expr: probe_success == 0
           for: 15m
           labels:
             severity: critical
           annotations:
-            description: |-
-              The host {{"{{ $labels.target }}"}} is currently unreachable
+            summary: |-
+              The host {{ $labels.target }} is currently unreachable
 
     pspEnabled: false
 
