--- a/kubernetes/main/bootstrap/talos/clusterconfig/.gitignore
+++ b/kubernetes/main/bootstrap/talos/clusterconfig/.gitignore
@@ -2,3 +2,12 @@ main-k8s1.greyrock.io.yaml
 main-k8s2.greyrock.io.yaml
 main-k8s3.greyrock.io.yaml
 talosconfig
+main-k8s1-new.greyrock.io.yaml
+main-k8s2-new.greyrock.io.yaml
+main-k8s3-new.greyrock.io.yaml
+main-k8s4.greyrock.io.yaml
+main-k8s5.greyrock.io.yaml
+main-k8s6.greyrock.io.yaml
+main-k8s7.greyrock.io.yaml
+main-k8s8.greyrock.io.yaml
+main-k8s9.greyrock.io.yaml
