--- a/kubernetes/main/bootstrap/talos/talconfig.yaml
+++ b/kubernetes/main/bootstrap/talos/talconfig.yaml
@@ -18,32 +18,58 @@ additionalMachineCertSans: *san
 
 nodes:
   - hostname: k8s1.greyrock.io
-    ipAddress: 10.1.1.4
+    ipAddress: 10.1.1.21
     controlPlane: true
-    installDiskSelector:
-      size: "<= 256GB"
-      model: "TS240GMTS420S"
+    installDisk: /dev/xvda
+    networkInterfaces:
+      - interface: enxce6e54f0d633
+        dhcp: true
+        vip:
+          ip: ${clusterEndpointIP}
+
+  - hostname: k8s2.greyrock.io
+    ipAddress: 10.1.1.22
+    controlPlane: true
+    installDisk: /dev/xvda
+    networkInterfaces:
+      - interface: enxc29867e506ac
+        dhcp: true
+        vip:
+          ip: ${clusterEndpointIP}
+
+  - hostname: k8s3.greyrock.io
+    ipAddress: 10.1.1.23
+    controlPlane: true
+    installDisk: /dev/xvda
+    networkInterfaces:
+      - interface: enx1ee755b5ca64
+        dhcp: true
+        vip:
+          ip: ${clusterEndpointIP}
+
+  - hostname: k8s4.greyrock.io
+    ipAddress: 10.1.1.24
+    controlPlane: false
+    installDisk: /dev/xvda
     machineDisks:
-      - device: /dev/disk/by-id/ata-INTEL_SSDSC2BB800G4_BTWL406300TG800RGN
+      - device: /dev/xvdc
         partitions:
           - mountpoint: /var/mnt/sata
     networkInterfaces:
+      - interface: bond1
+        bond:
+          mode: active-backup
+          deviceSelectors:
+            - hardwareAddr: 62:5f:5a:a0:31:f7
+        dhcp: true
       - interface: bond0
         bond:
           mode: active-backup
           deviceSelectors:
-            - hardwareAddr: 00:30:93:12:38:d3
-              driver: atlantic
+            - hardwareAddr: 76:45:95:3e:9d:90
         dhcp: true
-        vip:
-          ip: ${clusterEndpointIP}
-        vlans:
-          - &vlan40
-            vlanId: 40
-            mtu: 1500
-            dhcp: true
-            dhcpOptions:
-              routeMetric: 4096
+        dhcpOptions:
+          routeMetric: 4096
     patches:
       - &kubelet_extra_mounts |-
         machine:
@@ -57,55 +83,185 @@ nodes:
                   - rshared
                   - rw
 
-  - hostname: k8s2.greyrock.io
-    ipAddress: 10.1.1.5
-    controlPlane: true
-    installDiskSelector:
-      size: "<= 256GB"
-      model: "TS240GMTS420S"
+  - hostname: k8s5.greyrock.io
+    ipAddress: 10.1.1.25
+    controlPlane: false
+    installDisk: /dev/xvda
     machineDisks:
-      - device: /dev/disk/by-id/ata-INTEL_SSDSC2BB800G4_BTWL503001EB800RGN
+      - device: /dev/xvdc
         partitions:
           - mountpoint: /var/mnt/sata
     networkInterfaces:
+      - interface: bond1
+        bond:
+          mode: active-backup
+          deviceSelectors:
+            - hardwareAddr: 52:46:8f:c8:7c:50
+        dhcp: true
       - interface: bond0
         bond:
           mode: active-backup
           deviceSelectors:
-            - hardwareAddr: 00:30:93:12:38:d6
-              driver: atlantic
+            - hardwareAddr: 8e:f6:87:62:48:f9
         dhcp: true
-        vip:
-          ip: ${clusterEndpointIP}
-        vlans:
-          - *vlan40
+        dhcpOptions:
+          routeMetric: 4096
     patches:
-      - *kubelet_extra_mounts
+      - &kubelet_extra_mounts |-
+        machine:
+          kubelet:
+            extraMounts:
+              - destination: /var/mnt/sata
+                type: bind
+                source: /var/mnt/sata
+                options:
+                  - rbind
+                  - rshared
+                  - rw
 
-  - hostname: k8s3.greyrock.io
-    ipAddress: 10.1.1.6
-    controlPlane: true
-    installDiskSelector:
-      size: "<= 256GB"
-      model: "TS240GMTS420S"
+  - hostname: k8s6.greyrock.io
+    ipAddress: 10.1.1.26
+    controlPlane: false
+    installDisk: /dev/xvda
     machineDisks:
-      - device: /dev/disk/by-id/ata-INTEL_SSDSC2BB800G4_BTWL421602AP800RGN
+      - device: /dev/xvdc
         partitions:
           - mountpoint: /var/mnt/sata
     networkInterfaces:
+      - interface: bond1
+        bond:
+          mode: active-backup
+          deviceSelectors:
+            - hardwareAddr: f2:ec:70:30:c9:45
+        dhcp: true
       - interface: bond0
         bond:
           mode: active-backup
           deviceSelectors:
-            - hardwareAddr: 00:30:93:12:38:8c
-              driver: atlantic
+            - hardwareAddr: b6:bd:38:b0:9a:eb
         dhcp: true
-        vip:
-          ip: ${clusterEndpointIP}
-        vlans:
-          - *vlan40
+        dhcpOptions:
+          routeMetric: 4096
     patches:
-      - *kubelet_extra_mounts
+      - &kubelet_extra_mounts |-
+        machine:
+          kubelet:
+            extraMounts:
+              - destination: /var/mnt/sata
+                type: bind
+                source: /var/mnt/sata
+                options:
+                  - rbind
+                  - rshared
+                  - rw
+
+  - hostname: k8s7.greyrock.io
+    ipAddress: 10.1.1.27
+    controlPlane: false
+    installDisk: /dev/xvda
+    machineDisks:
+      - device: /dev/xvdc
+        partitions:
+          - mountpoint: /var/mnt/sata
+    networkInterfaces:
+      - interface: bond1
+        bond:
+          mode: active-backup
+          deviceSelectors:
+            - hardwareAddr: ea:08:6d:14:97:27
+        dhcp: true
+      - interface: bond0
+        bond:
+          mode: active-backup
+          deviceSelectors:
+            - hardwareAddr: 36:3f:ca:c6:49:4d
+        dhcp: true
+        dhcpOptions:
+          routeMetric: 4096
+    patches:
+      - &kubelet_extra_mounts |-
+        machine:
+          kubelet:
+            extraMounts:
+              - destination: /var/mnt/sata
+                type: bind
+                source: /var/mnt/sata
+                options:
+                  - rbind
+                  - rshared
+                  - rw
+
+  - hostname: k8s8.greyrock.io
+    ipAddress: 10.1.1.28
+    controlPlane: false
+    installDisk: /dev/xvda
+    machineDisks:
+      - device: /dev/xvdc
+        partitions:
+          - mountpoint: /var/mnt/sata
+    networkInterfaces:
+      - interface: bond1
+        bond:
+          mode: active-backup
+          deviceSelectors:
+            - hardwareAddr: ae:17:97:79:bc:da
+        dhcp: true
+      - interface: bond0
+        bond:
+          mode: active-backup
+          deviceSelectors:
+            - hardwareAddr: fe:59:32:2e:59:73
+        dhcp: true
+        dhcpOptions:
+          routeMetric: 4096
+    patches:
+      - &kubelet_extra_mounts |-
+        machine:
+          kubelet:
+            extraMounts:
+              - destination: /var/mnt/sata
+                type: bind
+                source: /var/mnt/sata
+                options:
+                  - rbind
+                  - rshared
+                  - rw
+
+  - hostname: k8s9.greyrock.io
+    ipAddress: 10.1.1.29
+    controlPlane: false
+    installDisk: /dev/xvda
+    machineDisks:
+      - device: /dev/xvdc
+        partitions:
+          - mountpoint: /var/mnt/sata
+    networkInterfaces:
+      - interface: bond1
+        bond:
+          mode: active-backup
+          deviceSelectors:
+            - hardwareAddr: 96:ab:c2:56:5a:af
+        dhcp: true
+      - interface: bond0
+        bond:
+          mode: active-backup
+          deviceSelectors:
+            - hardwareAddr: 32:67:ab:a9:ae:05
+        dhcp: true
+        dhcpOptions:
+          routeMetric: 4096
+    patches:
+      - &kubelet_extra_mounts |-
+        machine:
+          kubelet:
+            extraMounts:
+              - destination: /var/mnt/sata
+                type: bind
+                source: /var/mnt/sata
+                options:
+                  - rbind
+                  - rshared
+                  - rw
 
 controlPlane:
   schematic:
@@ -116,6 +272,7 @@ controlPlane:
         officialExtensions:
           - siderolabs/intel-ucode
           - siderolabs/i915-ucode
+          - siderolabs/xen-guest-agent
 
   patches:
     # Disable search domain everywhere
@@ -153,7 +310,6 @@ controlPlane:
     # Cluster configuration
     - |-
       cluster:
-        allowSchedulingOnMasters: true
         proxy:
           disabled: true
 
@@ -208,6 +364,99 @@ controlPlane:
               - os:admin
             allowedKubernetesNamespaces:
               - system-upgrade
+
+    # Kubelet configuration
+    - |-
+      machine:
+        kubelet:
+          extraArgs:
+            rotate-server-certificates: "true"
+          extraConfig:
+            maxPods: 150
+          nodeIP:
+            validSubnets:
+                - 10.1.1.0/24
+
+    # Custom sysctls
+    - |-
+      machine:
+        sysctls:
+          fs.inotify.max_queued_events: "65536"
+          fs.inotify.max_user_instances: "8192"
+          fs.inotify.max_user_watches: "524288"
+          net.core.rmem_max: "2500000"
+          net.core.wmem_max: "2500000"
+
+worker:
+  schematic:
+    customization:
+      extraKernelArgs:
+        - net.ifnames=1
+      systemExtensions:
+        officialExtensions:
+          - siderolabs/intel-ucode
+          - siderolabs/i915-ucode
+          - siderolabs/xen-guest-agent
+
+  patches:
+    # Disable search domain everywhere
+    - |-
+      machine:
+        network:
+          disableSearchDomain: true
+
+    # Force nameserver
+    - |-
+      machine:
+        network:
+          nameservers:
+            - 10.1.1.11
+
+    # Configure NTP
+    - |-
+      machine:
+        time:
+          disabled: false
+          servers:
+            - 10.1.7.2
+            - 10.1.7.3
+            - 10.1.7.4
+            - 10.1.7.5
+
+    # Cluster configuration
+    - |-
+      cluster:
+        proxy:
+          disabled: true
+
+    # Configure containerd
+    - |-
+      machine:
+        files:
+          - op: create
+            path: /etc/cri/conf.d/20-customization.part
+            content: |
+              [plugins]
+                [plugins."io.containerd.grpc.v1.cri"]
+                  enable_unprivileged_ports = true
+                  enable_unprivileged_icmp = true
+
+    # Configure nfs mount options
+    - |-
+      machine:
+        files:
+          - op: overwrite
+            path: /etc/nfsmount.conf
+            permissions: 0o644
+            content: |
+              [ NFSMount_Global_Options ]
+              nfsvers=4.2
+              hard=True
+              noatime=True
+              nodiratime=True
+              rsize=131072
+              wsize=131072
+              nconnect=8
 
     # Kubelet configuration
     - |-
