--- a/kubernetes/main/apps/kube-system/cilium/app/values.yaml
+++ b/kubernetes/main/apps/kube-system/cilium/app/values.yaml
@@ -3,6 +3,13 @@ autoDirectNodeRoutes: true
 bandwidthManager:
   bbr: true
   enabled: true
+bgp:
+  enabled: false
+  announce:
+    loadbalancerIP: true
+    podCIDR: false
+bgpControlPlane:
+  enabled: true
 bpf:
   masquerade: true
   tproxy: true
@@ -49,7 +56,7 @@ k8sServicePort: 7445
 kubeProxyReplacement: true
 kubeProxyReplacementHealthzBindAddr: 0.0.0.0:10256
 l2announcements:
-  enabled: true
+  enabled: false
 loadBalancer:
   algorithm: maglev
   mode: dsr
