--- a/kubernetes/main/apps/home-automation/ambientweather2mqtt/app/helmrelease.yaml
+++ b/kubernetes/main/apps/home-automation/ambientweather2mqtt/app/helmrelease.yaml
@@ -44,7 +44,7 @@ spec:
         controller: ambientweather2mqtt
         type: LoadBalancer
         annotations:
-          io.cilium/lb-ipam-ips: "10.1.1.159"
+          io.cilium/lb-ipam-ips: 10.45.0.26
         externalTrafficPolicy: Cluster
         ports:
           http:
