--- a/kubernetes/main/apps/network/ingress-nginx/external/helmrelease.yaml
+++ b/kubernetes/main/apps/network/ingress-nginx/external/helmrelease.yaml
@@ -32,7 +32,7 @@ spec:
         type: LoadBalancer
         annotations:
           external-dns.alpha.kubernetes.io/hostname: "ingress-ext.greyrock.casa"
-          io.cilium/lb-ipam-ips: "10.1.1.132"
+          io.cilium/lb-ipam-ips: 10.45.0.1
         externalTrafficPolicy: Cluster
 
       publishService:
