fix(zwave): Ingress to http

--- a/kubernetes/main/apps/home-automation/zwave-js-ui/app/helmrelease.yaml
+++ b/kubernetes/main/apps/home-automation/zwave-js-ui/app/helmrelease.yaml
@@ -81,6 +81,7 @@ spec:
                 pathType: Prefix
                 service:
                   identifier: app
+                  port: http
         tls:
           - hosts:
               - ${HOSTNAME}
