--- a/kubernetes/main/apps/home-automation/scrypted/app/helmrelease.yaml
+++ b/kubernetes/main/apps/home-automation/scrypted/app/helmrelease.yaml
@@ -39,7 +39,7 @@ spec:
           app:
             image:
               repository: ghcr.io/koush/scrypted
-              tag: 20-jammy-full-v0.100.1
+              tag: v0.100.1-jammy-full
             probes:
               liveness:
                 enabled: true
