--- a/kubernetes/main/bootstrap/talos/clusterconfig/.gitignore
+++ b/kubernetes/main/bootstrap/talos/clusterconfig/.gitignore
@@ -11,3 +11,18 @@ main-k8s6.greyrock.io.yaml
 main-k8s7.greyrock.io.yaml
 main-k8s8.greyrock.io.yaml
 main-k8s9.greyrock.io.yaml
+main-k8s01.greyrock.io.yaml
+main-k8s02.greyrock.io.yaml
+main-k8s03.greyrock.io.yaml
+main-k8s04.greyrock.io.yaml
+main-k8s05.greyrock.io.yaml
+main-k8s06.greyrock.io.yaml
+main-k8s07.greyrock.io.yaml
+main-k8s08.greyrock.io.yaml
+main-k8s09.greyrock.io.yaml
+main-k8s10.greyrock.io.yaml
+main-k8s11.greyrock.io.yaml
+main-k8s12.greyrock.io.yaml
+main-k8s13.greyrock.io.yaml
+main-k8s14.greyrock.io.yaml
+main-k8s15.greyrock.io.yaml
