--- a/kubernetes/main/apps/security/authelia/app/config/configuration.yaml
+++ b/kubernetes/main/apps/security/authelia/app/config/configuration.yaml
@@ -156,3 +156,15 @@ identity_providers:
           - https://files.greyrock.casa/oidc-callback.html
           - https://files.greyrock.casa/oidc-silent-redirect.html
         userinfo_signed_response_alg: none
+
+      - client_id: "{{ .xenorchestra_oauth_client_id }}"
+        client_name: Xen-Orchestra
+        client_secret: "{{ .xenorchestra_oauth_client_secret }}"
+        public: false
+        authorization_policy: two_factor
+        pre_configured_consent_duration: 1y
+        scopes: ["openid", "profile", "groups", "email"]
+        redirect_uris:
+          - https://xo.greyrock.io/signin/oidc/callback
+        userinfo_signed_response_alg: none
+        token_endpoint_auth_method: client_secret_post
