fix(renovate): Automerge Prowlarr

--- a/.github/renovate/autoMerge.json5
+++ b/.github/renovate/autoMerge.json5
@@ -27,7 +27,7 @@
       matchDatasources: ["helm"],
       automerge: true,
       matchUpdateTypes: ["minor", "patch"],
-      matchPackageNames: ["prowlarr-nightly"],
+      matchPackageNames: ["ghcr.io/onedr0p/prowlarr-nightly"],
       ignoreTests: false,
     },
   ],
