--- a/kubernetes/main/apps/monitoring/grafana/app/dashboard/kustomization.yaml
+++ b/kubernetes/main/apps/monitoring/grafana/app/dashboard/kustomization.yaml
@@ -6,9 +6,9 @@ configMapGenerator:
   - name: grafana-dashboard
     files:
       - home.json
-  - name: smartctl-exporter-dashboard
-    files:
-      - smartctl-exporter.json
+  # - name: smartctl-exporter-dashboard
+  #   files:
+  #     - smartctl-exporter.json
 generatorOptions:
   disableNameSuffixHash: true
   annotations:
