fix(vm): Replace Thanos references

--- a/kubernetes/main/apps/monitoring/kromgo/app/helmrelease.yaml
+++ b/kubernetes/main/apps/monitoring/kromgo/app/helmrelease.yaml
@@ -43,7 +43,7 @@ spec:
               repository: ghcr.io/kashalls/kromgo
               tag: 0.3.1
             env:
-              PROMETHEUS_URL: http://thanos-query-frontend.monitoring.svc.cluster.local:10902
+              PROMETHEUS_URL: http://vmselect-victoria-metrics.monitoring.svc.cluster.local:8481/select/0/prometheus
             probes:
               liveness:
                 enabled: true
