--- a/kubernetes/main/apps/rook-ceph/rook-ceph/cluster/helmrelease.yaml
+++ b/kubernetes/main/apps/rook-ceph/rook-ceph/cluster/helmrelease.yaml
@@ -41,7 +41,7 @@ spec:
         enabled: true
         urlPrefix: /
         ssl: false
-        prometheusEndpoint: http://thanos-query-frontend.monitoring.svc.cluster.local:10902
+        prometheusEndpoint: http://vmselect-victoria-metrics.monitoring.svc.cluster.local:8481/select/0/prometheus
       mgr:
         modules:
           - name: pg_autoscaler
