fix(vm): Replace cluster name label

--- a/kubernetes/main/apps/monitoring/victoria-metrics/app/helmrelease.yaml
+++ b/kubernetes/main/apps/monitoring/victoria-metrics/app/helmrelease.yaml
@@ -147,6 +147,8 @@ spec:
         replicaCount: 1
         shardCount: 2
         scrapeInterval: 30s
+        externalLabels:
+          cluster: main
         resources:
           requests:
             cpu: 50m
