--- a/kubernetes/main/apps/monitoring/victoria-metrics/app/helmrelease.yaml
+++ b/kubernetes/main/apps/monitoring/victoria-metrics/app/helmrelease.yaml
@@ -217,6 +217,8 @@ spec:
       enabled: false
     kubeControllerManager:
       enabled: false
+    kubeProxy:
+      enabled: false
     kubeScheduler:
       enabled: false
     kubeEtcd:
